--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,3 +2,4 @@ sonar.projectKey=assumption.jptracer
 sonar.projectName=JPTracer
 sonar.projectVersion=1.0
 sonar.sources=src/main
+sonar.java.source=1.8
