--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,6 @@ install:
  - ./mvnw install -DskipTests=true -Dmaven.javadoc.skip=true -B -V
 addons:
   sonarqube:
-    organization: "assumption-github"
+    organization: "305"
 script:
  - sonar-scanner
