--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ addons:
   sonarqube:
     organization: "305"
 script:
- - sonar-scanner
+ - mvn clean org.jacoco:jacoco-maven-plugin:prepare-agent install sonar:sonar
