--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,16 @@
             <artifactId>javacl</artifactId>
             <version>1.0.0-RC4</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+        <dependency>
+            <groupId>com.openpojo</groupId>
+            <artifactId>openpojo</artifactId>
+            <version>0.8.4</version>
+        </dependency>
     </dependencies>
 
     <build>
