--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>assumption</groupId>
-    <artifactId>jptracer</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <groupId>Assumption</groupId>
+    <artifactId>Assumption-JPTracer</artifactId>
+    <version>2.0-SNAPSHOT</version>
 
     <dependencies>
         <dependency>
