--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
 sonar.projectKey=assumption.jptracer
-sonar.projectName=assumption.jptracer
-sonar.projectVersion=1.0
+sonar.projectName=Assumption-JPTracer
+sonar.projectVersion=2.0
 sonar.sources=src/main
 sonar.java.source=1.8
